[gd_scene load_steps=2 format=2]

[ext_resource path="res://animation_tree_controllers/AnimationTreeBlendControllerTimer.gd" type="Script" id=1]

[node name="AnimationTreeBlendControllerTimer" type="Node"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
